--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,20 @@
 <resources>
     <string name="app_name">Kindler</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_name">Name</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_register">Create Account</string>
     <string name="action_sign_in">Sign in</string>
-    <string name="title_activity_signup">No Account Yet? Create One</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
+    <string name="title_activity_signup">No account yet? Create one</string>
+    <string name="login_activity_login">Already have an account? Sign in here</string>
+    <string name="tinderLogo">https://firebasestorage.googleapis.com/v0/b/kindler-2e035.appspot.com/o/tinder-logo.png?alt=media&amp;token=d104b4af-5344-4f87-b51a-9c5c2d9bede3</string>
+
 </resources>
