--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
         https://firebasestorage.googleapis.com/v0/b/kindler-2e035.appspot.com/o/tinder-logo.png?alt=media&amp;token=d104b4af-5344-4f87-b51a-9c5c2d9bede3
     </string>
     <string name="refresh">placeholder string</string>
+    <string name="profile">placeholder string</string>
+
 
     <string-array name="genres">
         <item>Art</item>
